PLUGINWIZARD-67 : Create Business Classes before AdminFeatures and XPage in order to affect them for CRUD's generation
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@53538 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -11,7 +11,6 @@ pagePathLabel=G\u00e9n\u00e9rateur de plugins
 adminFeature.pluginwizard_management.name=Gestion de PluginWizard
 adminFeature.pluginwizard_management.description=Permet de mettre  jour les configurations actuelles afin de g\u00e9n\u00e9rer un plugin
 
-
 ################################################################################
 # create_plugin.html
 pluginwizard_create_plugin.create_plugin.pageTitle=Cr\u00e9er un plugin de Lutece
@@ -83,10 +82,8 @@ pluginwizard_modify_plugin.labelAddMavenPom=Le fichier pom.xml pour construire l
 pluginwizard_modify_plugin.labelAddPluginXmlDefinition=Le fichier XML de d\u00e9finition du plugin
 pluginwizard_modify_plugin.labelAddSpringContextXml=Le fichier de context de Spring
 pluginwizard_modify_plugin.labelAddXPage=Les classes Java des XPage
-
 pluginwizard_modify_plugin.labelInformation=Information
 pluginwizard_modify_plugin.pageHelp=Cet assistant permet de g\u00e9n\u00e9rer un plugin Lut\u00e8ce. A chaque \u00e9tape vous pourrez d\u00e9crire les composants \u00e0 g\u00e9n\u00e9rer. A la fin de celles-ci pluginwizard vous d\u00e9livrera une archive avec tous les fichiers sources et de configuration n\u00e9cessaires \u00e0 votre plugin.
-
 
 
 ###############################################################################
@@ -104,7 +101,6 @@ pluginwizard.generate_button=G\u00e9n\u00e9rer
 ###############################################################################
 #wizard_create_admin_feature.html
 pluginwizard_create_admin_feature.pageTitle=Cr\u00e9er un fonctionnalit\u00e9 d'administration
-
 
 ###############################################################################
 #pluginwizard_create_application_feature.html
@@ -132,11 +128,13 @@ pluginwizard_create_admin_feature.labelLevel1=Niveau 1 - Droits de l'administrat
 pluginwizard_create_admin_feature.labelLevel2=Niveau 2 - Droits du webmestre
 pluginwizard_create_admin_feature.labelLevel3=Niveau 3 - Droits de l'assistant webmestre
 pluginwizard_create_admin_feature.buttonCreateFeature=Cr\u00e9er la fonctionnalit\u00e9
+pluginwizard_create_admin_feature.labelBusinessClass=Classes m\u00e9tier
 pluginwizard_create_admin_feature.buttonBack=Retour
 pluginwizard_create_admin_feature.pageHelp=Une fonctionnalit\u00e9 d'administration ou "Admin Feature" est une fonction qui sera accessible dans les menus du backoffice \u00e0 tous les utilisateurs disposant du droit et du niveau de droit associ\u00e9. Le nom technique est la racine de nommage des composants associ\u00e9s \u00e0 cette fonctionnalit\u00e9 (Classe Java, JSP, templates, ...)  
 
 ###############################################################################
 #pluginwizard_create_application.html
+pluginwizard_create_application.labelBusinessClass=Classes m\u00e9tier
 pluginwizard_create_application.pageTitle=Cr\u00e9er une XPage
 pluginwizard_create_application.labelApplicationName=Nom de la XPage
 pluginwizard_create_application.labelApplicationClass=La classe de la XPage
@@ -145,13 +143,12 @@ pluginwizard_create_application.buttonBack=Retour
 
 ###############################################################################
 #pluginwizard_modify_application.html
+pluginwizard_modify_application.labelBusinessClass=Classes m\u00e9tier
 pluginwizard_modify_application.pageTitle=Modifier la XPage
 pluginwizard_modify_application.labelApplicationName=Nom de la XPage
 pluginwizard_modify_application.labelApplicationClass=La classe de la XPage
 pluginwizard_modify_application.buttonModifyApplication=Modifier la XPage
 pluginwizard_modify_application.buttonBack=Retour
-
-
 
 ###############################################################################
 #pluginwizard_create_portlet.html
@@ -175,6 +172,7 @@ pluginwizard_modify_portlet.labelJspBaseName=Nom de base des JSP
 pluginwizard_modify_portlet.buttonModifyPortlet=Modifier la portlet
 pluginwizard_modify_portlet.buttonBack=Retour
 pluginwizard_modify_portlet.pageHelp=Les champs n\u00e9cessaires pour la cr\u00e9ation d'un plugin sont la classe du portlet.,le nom du portlet qui doit obligatoirement finir par "_PORTLET',l'url de cr\u00e9ation qui correspond \u00e0 une JSP qui sera aussi g\u00e9n\u00e9r\u00e9 automatiquement. La modification du portlet qui sera aussi g\u00e9r\u00e9e par une JSP. Le bouton " Modifier la portlet " permet de cr\u00e9er son portlet.de donn\u00e9es r\u00e9quise".
+
 ###############################################################################
 #pluginwizard_manage_plugin_admin_features.html
 pluginwizard_manage_plugin_admin_features.pageTitle=G\u00e9rer les fonctionnalit\u00e9s d'administration
@@ -202,7 +200,6 @@ pluginwizard_manage_plugin_admin_features.labelI18n=i18n
 pluginwizard_manage_plugin_admin_features.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_manage_plugin_admin_features.labelDescriptionStep=Etape Administration
 
-
 pluginwizard_create_business_class.pageTitle=Ajouter une classe m\u00e9tier
 pluginwizard_create_business_class.labelCreationStep=Cr\u00e9ation
 pluginwizard_create_business_class.labelDescriptionStep=Description
@@ -216,11 +213,8 @@ pluginwizard_create_business_class.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_create_business_class.labelBusinessClass=Classe M\u00e9tier
 pluginwizard_create_business_class.labelBusinessTableName=Nom de la table
 pluginwizard_create_business_class.labelBusinessAttributes=Attributs m\u00e9tier
-pluginwizard_create_business_class.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_create_business_class.buttonCreateClass=Cr\u00e9er la classe
 pluginwizard_create_business_class.buttonBack=Retour
-
-
 
 ###############################################################################
 #pluginwizard_manage_business_classes.html
@@ -244,14 +238,11 @@ pluginwizard_modify_business_class.labelModifyttribute=Modifier un attribut
 pluginwizard_modify_business_class.labelDeleteAttribute=Effacer un attribut
 pluginwizard_modify_business_class.labelFielsetAttributes=Attributs de la classe m\u00e9tier
 
-
 pluginwizard_modify_business_class.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_modify_business_class.buttonModifyClass=Modifier la classe
 pluginwizard_modify_business_class.buttonBack=Retour 
 pluginwizard_modify_business_class.buttonModifyAttribute=Modifier attribut
 pluginwizard_modify_business_class.buttonRemoveAttribute=Effacer attribut
-
-
 
 ###############################################################################
 #pluginwizard_manage_business_classes.html
@@ -316,11 +307,6 @@ pluginwizard_plugin_recapitulate.labelScheme=Mod\u00e8le de g\u00e9n\u00e9ration
 #pluginwizard_modify_application_feature.html
 pluginwizard_modify_application_feature.pageTitle=Modifier une XPage
 
-
-
-
-
-
 ###############################################################################
 #pluginwizard_modify_admin_feature.html
 pluginwizard_modify_admin_feature.pageTitle=Modifier la fonctionnalit\u00e9 d'administration
@@ -329,6 +315,7 @@ pluginwizard_modify_admin_feature.labelFeatureManagement=Droit
 pluginwizard_modify_admin_feature.labelFeatureDescription=Description
 pluginwizard_modify_admin_feature.labelFeatureLevel=Niveau
 pluginwizard_modify_admin_feature.labelFeatureTitle=Titre
+pluginwizard_modify_admin_feature.labelBusinessClass=Classes m\u00e9tier
 pluginwizard_modify_admin_feature.labelFeatureName=Nom technique
 
 pluginwizard_modify_admin_feature.buttonBack=Retour
