--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -267,7 +267,14 @@ pluginwizard_manage_plugin_applications.buttonAddApplication=Ajouter une XPage
 pluginwizard_manage_plugin_applications.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_manage_plugin_applications.buttonNext=Etape suivante
 
+###############################################################################
+#pluginwizard_manage_plugin_rest.html
 
+pluginwizard_manage_plugin_rest.pageTitle=G\u00e9rer les classes m\u00e9tier utilisant l'architecture REST
+pluginwizard_manage_plugin_rest.labelBusinessClass=Classes m\u00e9tier
+pluginwizard_manage_plugin_rest.buttonBack=Etape pr\u00e9c\u00e9dente
+pluginwizard_manage_plugin_rest.buttonNext=Etape suivante
+pluginwizard_manage_plugin_rest.pageHelp=REST est une architecture web services qui permet d'\u00e9changer des donn\u00e9es sur le web
 
 ###############################################################################
 #pluginwizard_manage_portlets.html
@@ -293,6 +300,8 @@ pluginwizard_plugin_recapitulate.labelPortlet=portlet
 pluginwizard_plugin_recapitulate.labelAdminFeature=fonctionnalit\u00e9 d'administration
 pluginwizard_plugin_recapitulate.labelBusinessClasse=classe m\u00e9tier
 pluginwizard_plugin_recapitulate.labelXPages=XPages
+pluginwizard_plugin_recapitulate.labelRests=Associ\u00e9es \u00e0 REST
+pluginwizard_plugin_recapitulate.labelRest=Associ\u00e9e \u00e0 REST
 pluginwizard_plugin_recapitulate.labelPortlets=portlets
 pluginwizard_plugin_recapitulate.labelAdminFeatures=fonctionnalit\u00e9s d'administration
 pluginwizard_plugin_recapitulate.labelBusinessClasses=classes m\u00e9tiers
@@ -344,7 +353,8 @@ pluginwizard_create_application.labelDescriptionStep=Description
 pluginwizard_create_application.labelFeaturesStep=Administration
 pluginwizard_create_application.labelBusinessStep=M\u00e9tier
 pluginwizard_create_application.labelXPageStep=XPage
-pluginwizard_create_application.labelPortletsStep=Portlets
+pluginwizard_create_application.labelPortletsStep=Portlet
+pluginwizard_create_application.labelRestStep=REST
 pluginwizard_create_application.labelI18n=i18n
 pluginwizard_create_application.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_create_application.pageHelp=Une XPage est une page "sp\u00e9ciale" du site qui se trouve en dehors de l'arborescence des pages "normales". Une XPage permet de r\u00e9aliser des applications int\u00e9gr\u00e9es au portail.
