PLUGINWIZARD-88 : Wording improvements
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@65920 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -270,11 +270,11 @@ pluginwizard_manage_plugin_applications.buttonNext=Etape suivante
 ###############################################################################
 #pluginwizard_manage_plugin_rest.html
 
-pluginwizard_manage_plugin_rest.pageTitle=G\u00e9rer les classes m\u00e9tier utilisant l'architecture REST
-pluginwizard_manage_plugin_rest.labelBusinessClass=Classes m\u00e9tier
+pluginwizard_manage_plugin_rest.pageTitle=Exposer des classes m\u00e9tiers via une API de Web Services REST
+pluginwizard_manage_plugin_rest.labelBusinessClass=Classes m\u00e9tiers
 pluginwizard_manage_plugin_rest.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_manage_plugin_rest.buttonNext=Etape suivante
-pluginwizard_manage_plugin_rest.pageHelp=REST est une architecture web services qui permet d'\u00e9changer des donn\u00e9es sur le web
+pluginwizard_manage_plugin_rest.pageHelp=Les Web Services REST permettent d'acc\u00e9der \u00e0 une ressource (un objet m\u00e9tier typiquement) via HTTP et de r\u00e9cup\u00e9rer les informations au format XML ou JSON. L'API propose des fonctions de lecture, cr\u00e9ation, modification, suppression et de liste. 
 
 ###############################################################################
 #pluginwizard_manage_portlets.html
@@ -300,8 +300,8 @@ pluginwizard_plugin_recapitulate.labelPortlet=portlet
 pluginwizard_plugin_recapitulate.labelAdminFeature=fonctionnalit\u00e9 d'administration
 pluginwizard_plugin_recapitulate.labelBusinessClasse=classe m\u00e9tier
 pluginwizard_plugin_recapitulate.labelXPages=XPages
-pluginwizard_plugin_recapitulate.labelRests=Associ\u00e9es \u00e0 REST
-pluginwizard_plugin_recapitulate.labelRest=Associ\u00e9e \u00e0 REST
+pluginwizard_plugin_recapitulate.labelRests=APIs REST pour des classes m\u00e9tiers
+pluginwizard_plugin_recapitulate.labelRest=API REST pour une classe m\u00e9tier
 pluginwizard_plugin_recapitulate.labelPortlets=portlets
 pluginwizard_plugin_recapitulate.labelAdminFeatures=fonctionnalit\u00e9s d'administration
 pluginwizard_plugin_recapitulate.labelBusinessClasses=classes m\u00e9tiers
