PLUGINWIZARD-93 : Id and description improvement : description is deleted and id is auto + correction of a lot of bugs

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -238,6 +238,10 @@ pluginwizard_modify_business_class.labelModifyttribute=Modifier un attribut
 pluginwizard_modify_business_class.labelDeleteAttribute=Effacer un attribut
 pluginwizard_modify_business_class.labelFielsetAttributes=Attributs de la classe m\u00e9tier
 
+pluginwizard_modify_business_class.labelId=id
+pluginwizard_modify_business_class.labelPrimaryKey=Cl\u00e9 Primaire
+pluginwizard_modify_business_class.labelAuto=Auto incr\u00e9ment
+
 pluginwizard_modify_business_class.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_modify_business_class.buttonModifyClass=Modifier la classe
 pluginwizard_modify_business_class.buttonBack=Retour 
@@ -656,5 +660,4 @@ error.portlet.jspBaseName.pattern=Le nom de base des JSP doit commencer par 'Por
 error.attribute.tablePrefix=Le nom de la table doit commencer par le nom du plugin suivi d'un underscore.
 error.attribute.primaryType=La cl\u00e9 primaire doit \u00eatre de type entier.
 error.attribute.descriptionType=La description ne peut \u00eatre de type entier.
-error.attributeCount=La classe m\u00e9tier doit contenir au moins deux attributs : une cl\u00e9 primaire et une description
-
+error.attribute.descriptionType=La description ne peut \u00eatre de type entier.
