Improve load/save model.json
Ability to :
load a plugin (model) from a json file
save a plugin (model) into a json file

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -15,9 +15,11 @@ adminFeature.pluginwizard_management.description=Permet de mettre  jour les conf
 # create_plugin.html
 pluginwizard_create_plugin.create_plugin.pageTitle=Cr\u00e9er un plugin de Lutece
 pluginwizard_create_plugin.labelPluginName=Nom du plugin 
+pluginwizard_create_plugin.labelPluginLoad=Fichier du plugin 
 pluginwizard_create_plugin.labelPluginNameHelp=En minuscules et compos\u00e9 uniquement de caract\u00e8res appartenant \u00e0 l'ensemble [a..z]
 pluginwizard_create_plugin.labelSummary=Cet assistant va g\u00e9n\u00e9rer les composants suivants
 pluginwizard_create_plugin.buttonCreatePlugin=Valider
+pluginwizard_create_plugin.buttonLoadPlugin=Charger
 pluginwizard_create_plugin.labelAddBusinessClasses=Les classes Java de la couche m\u00e9tier
 pluginwizard_create_plugin.labelAddSqlFiles=Les scripts SQL de cr\u00e9ation et d'initialisation de la base de donn\u00e9es
 pluginwizard_create_plugin.labelAddJspBean=Les classes Java de la couche pr\u00e9sentation
@@ -112,7 +114,9 @@ pluginwizard_create_modify_portlet.pageTitle=Modifier le portlet dans le plugin
 
 ###############################################################################
 #pluginwizard_create_plugin.html
-pluginwizard_create_plugin.pageTitle=Cr\u00e9er un plugin
+pluginwizard_create_plugin.pageTitle=Plugin Wizard
+pluginwizard_create_plugin.createPlugin=Cr\u00e9er ou modifier un plugin
+pluginwizard_create_plugin.loadPlugin=Charger la configuration d'un plugin
 
 ###############################################################################
 #pluginwizard_create_admin_feature.html
@@ -314,7 +318,7 @@ pluginwizard_plugin_recapitulate.labelPluginName=Nom du plugin
 pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eatre g\u00e9n\u00e9r\u00e9. Le bouton "G\u00e9n\u00e9rer l'archive des sources" permet de cr\u00e9er l'archive. Le bouton "Etape pr\u00e9c\u00e9dente" permet de revenir sur les \u00e9tapes afin de modifier les renseignements du plugin.
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Important ! </h4>Avant la premi\u00e8re ex\u00e9cution du plugin, vous devez finaliser les resources "texte" du plugin dans les diff\u00e9rentes langues.<br>Les fichiers se trouvent dans le r\u00e9pertoire /src/java/fr/paris/lutece/plugins/<i>monplugin</i>/resources/.
 pluginwizard_plugin_recapitulate.labelScheme=Mod\u00e8le de g\u00e9n\u00e9ration
-
+pluginwizard_plugin_recapitulate.buttonGenerateJson=T\u00e9l\u00e9charger le mod\u00e8le (JSON)
 
 ###############################################################################
 #pluginwizard_modify_application_feature.html
@@ -615,6 +619,7 @@ info.portlet.created=La portlet a \u00e9t\u00e9 ajout\u00e9e.
 info.portlet.updated=La portlet d'administration a \u00e9t\u00e9 modifi\u00e9e.
 info.portlet.deleted=La portlet d'administration a \u00e9t\u00e9 supprim\u00e9e.
 
+error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
 
 error.plugin.name.notEmpty=Le nom du plugin doit \u00eatre renseign\u00e9.
 error.plugin.name.pattern=Le nom du plugin doit \u00eatre en minuscule sans espaces ou autres caract\u00e8res
