PLUGINWIZARD-114: Added module management functionality

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -623,6 +623,7 @@ error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
 
 error.plugin.name.notEmpty=Le nom du plugin doit \u00eatre renseign\u00e9.
 error.plugin.name.pattern=Le nom du plugin doit \u00eatre en minuscule sans espaces ou autres caract\u00e8res
+error.module.name.pattern=Le nom du module doit \u00eatre en minuscule sans espaces [nomPlugin-nomModule]
 error.plugin.description.notEmpty=La description doit \u00eatre renseign\u00e9e.
 error.plugin.description.size=La description doit contenir entre 5 et 255 caract\u00e8res.
 error.plugin.provider.notEmpty=Le nom de l'auteur doit \u00eatre renseign\u00e9.
