PLUGINWIZARD-103 complete missing labels

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -14,7 +14,7 @@ adminFeature.pluginwizard_management.description=Permet de mettre  jour les conf
 ################################################################################
 # create_plugin.html
 pluginwizard_create_plugin.create_plugin.pageTitle=Cr\u00e9er un plugin de Lutece
-pluginwizard_create_plugin.labelPluginName=Nom du plugin 
+pluginwizard_create_plugin.labelPluginName=Cr\u00e9ation d'un plugin 
 pluginwizard_create_plugin.labelPluginLoad=Fichier du plugin 
 pluginwizard_create_plugin.labelPluginNameHelp=En minuscules et compos\u00e9 uniquement de caract\u00e8res appartenant \u00e0 l'ensemble [a..z]
 pluginwizard_create_plugin.labelSummary=Cet assistant va g\u00e9n\u00e9rer les composants suivants
@@ -304,7 +304,7 @@ pluginwizard_plugin_recapitulate.pageTitle=R\u00e9capitulatif et g\u00e9n\u00e9r
 pluginwizard_plugin_recapitulate.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_plugin_recapitulate.labelSummary=Liste des composants \u00e0 g\u00e9n\u00e9rer
 pluginwizard_plugin_recapitulate.labelXPage=XPage
-pluginwizard_plugin_recapitulate.labelPortlet=portlet
+pluginwizard_plugin_recapitulate.labelPortlet=Portlet
 pluginwizard_plugin_recapitulate.labelAdminFeature=fonctionnalit\u00e9 d'administration
 pluginwizard_plugin_recapitulate.labelBusinessClasse=classe m\u00e9tier
 pluginwizard_plugin_recapitulate.labelXPages=XPages
@@ -577,7 +577,7 @@ message.confirmRemoveConfigurationkey=Confirmation de la suppression de la cl\u0
 
 pluginwizard_create_plugin_description.labelElementsToGenerate=El\u00e9ments \u00e0 g\u00e9n\u00e9rer
 
-create_configurationkey.pageTitle=Cr\u00e9ation d'une cl\u00e9 de configuration
+create_configurationkey.pageTitle=Configuration
 create_configurationkey.tableLabel=Cr\u00e9ation d'une cl\u00e9 de configuration
 create_configurationkey.rowTitleConfigurationKey=Id
 create_configurationkey.rowTitleConfigurationValue=Valeur
@@ -666,3 +666,69 @@ error.attribute.tablePrefix=Le nom de la table doit commencer par le nom du plug
 error.attribute.primaryType=La cl\u00e9 primaire doit \u00eatre de type entier.
 error.attribute.descriptionType=La description ne peut \u00eatre de type entier.
 error.attribute.descriptionType=La description ne peut \u00eatre de type entier.
+pluginwizard_create_plugin.helpPluginName=Nom du plugin
+pluginwizard_manage_resource_keys.pageTitle=Gestion de la configuration
+pluginwizard_manage_resource_keys.buttonModifyPortlet=Modifier
+pluginwizard_manage_resource_keys.buttonDeletePortlet=Supprimer
+pluginwizard_manage_resource_keys.buttonAddKey=Ajouter une nouvelle configuration
+pluginwizard_manage_resource_keys.buttonBack=Etape suivante
+pluginwizard_manage_resource_keys.buttonNext=Etape pr\u00e9c\u00e9dente
+pluginwizard_manage_resource_keys.buttonItemsPerPage=Nb de cl\u00e9s
+pluginwizard_manage_resource_keys.labelItemsPerPage=Nb d'items par page
+pluginwizard_manage_resource_keys.columnTitleIdentifier=Id
+pluginwizard_manage_resource_keys.columnTitleEnglish=Anglais
+pluginwizard_manage_resource_keys.columnTitleFrench=Fran\u00e7ais
+pluginwizard_create_plugin_description.labelPluginClass=Class
+pluginwizard_create_plugin_description.labelPluginDocumentation=Documentation
+pluginwizard_create_plugin_description.labelPluginInstallation=Installation
+pluginwizard_create_plugin_description.labelPluginChanges=Modifications
+pluginwizard_create_plugin_description.labelPluginUserGuide=Guide utilisateur
+pluginwizard_create_plugin_description.labelPluginIconUrl=Icon URL
+pluginwizard_create_plugin_description.helpPluginName=Nom
+pluginwizard_create_plugin_description.helpPluginClass=Classe
+pluginwizard_create_plugin_description.helpPluginDescription=Description
+pluginwizard_create_plugin_description.helpPluginDocumentation=Documentation
+pluginwizard_create_plugin_description.helpPluginInstallation=Installation
+pluginwizard_create_plugin_description.helpPluginChanges=Modifications
+pluginwizard_create_plugin_description.helpPluginUserGuide=Guide utilisateur
+pluginwizard_create_plugin_description.helpPluginVersion=Version
+pluginwizard_create_plugin_description.helpPluginCopyright=Copyright
+pluginwizard_create_plugin_description.helpPluginIconUrl=Icon URL
+pluginwizard_create_plugin_description.helpPluginProvider=Fournisseur
+pluginwizard_create_plugin_description.helpPluginProviderUrl=Site fournisseur
+pluginwizard_create_plugin_description.helpPlugindbPoolRequired=Pool de base de donn\u00e9es requis
+pluginwizard_modify_plugin_description.labelPluginClass=Classe
+pluginwizard_modify_plugin_description.labelPluginDocumentation=Documentation
+pluginwizard_modify_plugin_description.labelPluginInstallation=Installation
+pluginwizard_modify_plugin_description.labelPluginChanges=Modifications
+pluginwizard_modify_plugin_description.labelPluginUserGuide=Guide utilisateur
+pluginwizard_modify_plugin_description.labelPluginIconUrl=Icon URL
+pluginwizard_create_business_class.labelAdminFeatures=Fonctionnalit\u00e9 de gestion
+pluginwizard_modify_business_class.labelModifyAttribute=Modifier un attribut
+pluginwizard_modify_business_class.labelBusinessAttributes=Attribut utilis\u00e9 par la classe Business
+pluginwizard_modify_business_class.buttonCreateClass=Modifier la classe
+pluginwizard_modify_pluginlabelCreationStep=Cr\u00e9er
+pluginwizard_modify_pluginlabelDescriptionStep=D\u00e9crire
+pluginwizard_modify_pluginlabelFeaturesStep=Fonctionnalit\u00e9s
+pluginwizard_modify_pluginlabelBusinessStep=Classe Business
+pluginwizard_modify_pluginlabelXPageStep=XPage
+pluginwizard_modify_pluginlabelPortletsStep=Portlets
+pluginwizard_modify_pluginlabelI18n=i18n
+pluginwizard_modify_pluginlabelGenerateStep=G\u00e9n\u00e9ration
+manage_pluginwizards.tableLabel=PluginWizard
+manage_pluginwizards.labelManagement=Configuration de PluginWizard
+pluginwizard_modify_plugin.helpPluginName=Le nom du plugin
+pluginwizard_create_plugin.create_plugin.pageHelp=Suivez pas \u00e0 pas l'assistant pour cr\u00e9er votre plugin
+manage_configurationkeys.columnId_key=columnId_key
+manage_configurationkeys.columnKey_description=columnKey_description
+manage_configurationkeys.columnKey_value=columnKey_value
+manage_configurationkeys.buttonAddConfigurationkey=buttonAddConfigurationkey
+manage_configurationkeys.actionDelete=actionDelete
+manage_configurationkeys.actionModify=actionModify
+create_configurationkey.rowId_key=Id
+create_configurationkey.rowKey_description=Description
+create_configurationkey.rowKey_value=valeur
+modify_configurationkey.rowId_key=Id
+modify_configurationkey.rowKey_description=Description
+modify_configurationkey.rowKey_value=Valeur
+modify_configurationkey.buttonValidate=Valider
