PLUGINWIZARD-115 add back button label property

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -319,6 +319,7 @@ pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eat
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Important ! </h4>Avant la premi\u00e8re ex\u00e9cution du plugin, vous devez finaliser les resources "texte" du plugin dans les diff\u00e9rentes langues.<br>Les fichiers se trouvent dans le r\u00e9pertoire /src/java/fr/paris/lutece/plugins/<i>monplugin</i>/resources/.
 pluginwizard_plugin_recapitulate.labelScheme=Mod\u00e8le de g\u00e9n\u00e9ration
 pluginwizard_plugin_recapitulate.buttonGenerateJson=Sauvegarder le mod\u00e8le (JSON)
+pluginwizard_plugin_recapitulate.home=Retour accueil
 
 ###############################################################################
 #pluginwizard_modify_application_feature.html
