PLUGINWIZARD-125 : Kotlin generation support (UI modifications)

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -20,9 +20,9 @@ pluginwizard_create_plugin.labelPluginNameHelp=En minuscules et compos\u00e9 uni
 pluginwizard_create_plugin.labelSummary=Cet assistant va g\u00e9n\u00e9rer les composants suivants
 pluginwizard_create_plugin.buttonCreatePlugin=Valider
 pluginwizard_create_plugin.buttonLoadPlugin=Charger
-pluginwizard_create_plugin.labelAddBusinessClasses=Les classes Java de la couche m\u00e9tier
+pluginwizard_create_plugin.labelAddBusinessClasses=Les classes Java ou Kotlin de la couche m\u00e9tier
 pluginwizard_create_plugin.labelAddSqlFiles=Les scripts SQL de cr\u00e9ation et d'initialisation de la base de donn\u00e9es
-pluginwizard_create_plugin.labelAddJspBean=Les classes Java de la couche pr\u00e9sentation
+pluginwizard_create_plugin.labelAddJspBean=Les classes Java ou Kotlin de la couche pr\u00e9sentation
 pluginwizard_create_plugin.labelAddBackOfficeTemplate=Les templates HTML
 pluginwizard_create_plugin.labelAddResourceFiles=Les fichiers ressources d'internationalisation (i18n)
 pluginwizard_create_plugin.labelAddBackOfficeJsp=Les JSP de l'interface d'administration
@@ -30,7 +30,7 @@ pluginwizard_create_plugin.labelAddPluginPropertiesFile=Le fichier properties de
 pluginwizard_create_plugin.labelAddMavenPom=Le fichier pom.xml pour construire le projet avec Maven
 pluginwizard_create_plugin.labelAddPluginXmlDefinition=Le fichier XML de d\u00e9finition du plugin
 pluginwizard_create_plugin.labelAddSpringContextXml=Le fichier de context de Spring
-pluginwizard_create_plugin.labelAddXPage=Les classes Java des XPage
+pluginwizard_create_plugin.labelAddXPage=Les classes Java ou Kotlin des XPage
 pluginwizard_create_plugin_description.labelTrue=Oui
 pluginwizard_create_plugin_description.labelFalse=Non
 pluginwizard_create_plugin.labelInformation=Information
@@ -73,9 +73,9 @@ pluginwizard_modify_plugin.pageTitle=Modifier le plugin
 pluginwizard_modify_plugin.labelPluginName=Nom du plugin 
 pluginwizard_modify_plugin.labelSummary=Cet assistant va g\u00e9n\u00e9rer les composants suivants
 pluginwizard_modify_plugin.buttonModifyPlugin=Modifier
-pluginwizard_modify_plugin.labelAddBusinessClasses=Les classes Java de la couche m\u00e9tier
+pluginwizard_modify_plugin.labelAddBusinessClasses=Les classes Java ou Kotlin de la couche m\u00e9tier
 pluginwizard_modify_plugin.labelAddSqlFiles=Les scripts SQL de cr\u00e9ation et d'initialisation de la base de donn\u00e9es
-pluginwizard_modify_plugin.labelAddJspBean=Les classes Java de la couche pr\u00e9sentation
+pluginwizard_modify_plugin.labelAddJspBean=Les classes Java ou Kotlin de la couche pr\u00e9sentation
 pluginwizard_modify_plugin.labelAddBackOfficeTemplate=Les templates HTML
 pluginwizard_modify_plugin.labelAddResourceFiles=Les fichiers ressources d'internationalisation (i18n)
 pluginwizard_modify_plugin.labelAddBackOfficeJsp=Les JSP de l'interface d'administration
@@ -256,7 +256,7 @@ pluginwizard_modify_business_class.buttonRemoveAttribute=Effacer attribut
 #pluginwizard_manage_business_classes.html
 pluginwizard_manage_business_classes.pageTitle=G\u00e9rer les classes m\u00e9tier
 pluginwizard_manage_business_classes.labelBusinessClass=Classe
-pluginwizard_manage_business_classes.helpBusinessClass=La classe m\u00e9tier est un Pojo java
+pluginwizard_manage_business_classes.helpBusinessClass=La classe m\u00e9tier est un Pojo java ou Kotlin
 pluginwizard_manage_business_classes.labelBusinessTableName=Nom de la table
 pluginwizard_manage_business_classes.helpBusinessTableName=La table est le lieu o\u00f9 les donn\u00e9es de l'objet m\u00e9tier sont stock\u00e9s
 pluginwizard_manage_business_classes.labelBusinessTableAttributes=Attributs
@@ -397,7 +397,7 @@ pluginwizard_create_plugin_description.labelPluginCopyright=Copyright
 pluginwizard_create_plugin_description.labelPluginProviderUrl=Url du Fournisseur
 pluginwizard_create_plugin_description.labelPlugindbPoolRequired=Base de donn\u00e9e requise
 
-pluginwizard_create_plugin_description.pageHelp=Les \u00e9l\u00e9ments descriptifs d'un plugin aident \u00e0 configurer la structure d'un projet de plugin de Lut\u00e8ce. Le nom du plugin a \u00e9t\u00e9 d\u00e9fini dans l'\u00e9tape de cr\u00e9ation. La classe du plugin est une classe Java. L'utilisation d'une base de donn\u00e9es par le plugin est sp\u00e9cifi\u00e9e gr\u00e2ce \u00e0 "Base de donn\u00e9es r\u00e9quise".
+pluginwizard_create_plugin_description.pageHelp=Les \u00e9l\u00e9ments descriptifs d'un plugin aident \u00e0 configurer la structure d'un projet de plugin de Lut\u00e8ce. Le nom du plugin a \u00e9t\u00e9 d\u00e9fini dans l'\u00e9tape de cr\u00e9ation. La classe du plugin est une classe Java ou Kotlin. L'utilisation d'une base de donn\u00e9es par le plugin est sp\u00e9cifi\u00e9e gr\u00e2ce \u00e0 "Base de donn\u00e9es r\u00e9quise".
 pluginwizard_create_plugin_description.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_create_plugin_description.buttonNext=Etape suivante
 
@@ -415,7 +415,7 @@ pluginwizard_modify_plugin_description.labelTrue=Oui
 pluginwizard_modify_plugin_description.labelFalse=Non
 pluginwizard_modify_plugin_description.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_modify_plugin_description.buttonNext=Etape suivante
-pluginwizard_modify_plugin_description.pageHelp=Les \u00e9l\u00e9ments descriptifs d'un plugin aident \u00e0 configurer la structure d'un projet de plugin de Lut\u00e8ce. Le nom du plugin a \u00e9t\u00e9 d\u00e9fini dans l'\u00e9tape de cr\u00e9ation. La classe du plugin est une classe Java. L'utilisation d'une base de donn\u00e9es par le plugin est sp\u00e9cifi\u00e9e gr\u00e2ce \u00e0 "Base de donn\u00e9es r\u00e9quise".
+pluginwizard_modify_plugin_description.pageHelp=Les \u00e9l\u00e9ments descriptifs d'un plugin aident \u00e0 configurer la structure d'un projet de plugin de Lut\u00e8ce. Le nom du plugin a \u00e9t\u00e9 d\u00e9fini dans l'\u00e9tape de cr\u00e9ation. La classe du plugin est une classe Java ou Kotlin. L'utilisation d'une base de donn\u00e9es par le plugin est sp\u00e9cifi\u00e9e gr\u00e2ce \u00e0 "Base de donn\u00e9es r\u00e9quise".
 
 
 
@@ -479,7 +479,7 @@ pluginwizard_create_portlet.labelBusinessAttributes=Attributs
 pluginwizard_create_portlet.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_create_portlet.pageHelp=Les champs n\u00e9cessaires pour la cr\u00e9ation d'un plugin sont la classe du portlet.,le nom du portlet qui doit obligatoirement finir par "_PORTLET',l'url de cr\u00e9ation qui correspond \u00e0 une JSP qui sera aussi g\u00e9n\u00e9r\u00e9 automatiquement. La modification du portlet qui sera aussi g\u00e9r\u00e9e par une JSP. Le bouton " Cr\u00e9er la portlet " permet de cr\u00e9er son portlet.
 pluginwizard_create_business_class.buttonCreateClass=Cr\u00e9er la classe m\u00e9tier
-pluginwizard_create_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
+pluginwizard_create_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java ou Kotlin, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
 
 
 ################### Etapes
@@ -534,7 +534,7 @@ pluginwizard_modify_business_class.labelNotNull=Obligatoire
 pluginwizard_modify_business_class.labelMaxLength=Taille Maxi
 pluginwizard_modify_business_class.labelAttributeDescription=Description
 pluginwizard_modify_business_class.labelAttributeAction=Action
-pluginwizard_modify_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
+pluginwizard_modify_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java ou Kotlin, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
 
 pluginwizard_manage_plugin_applications.labelCreationStep=Cr\u00e9ation
 pluginwizard_manage_plugin_applications.labelDescriptionStep=Description
