PLUGINWIZARD-138 : Internationalization of business class attributes types

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -67,6 +67,17 @@ pluginwizard_modify_attribute.labelMandatory=Obligatoire
 pluginwizard_modify_attribute.labelClassDescription=Description
 pluginwizard_modify_attribute.pageHelp=Les attributs sont en minuscule avec un "_' et font r\u00e9f\u00e9rence \u00e0 une colonne de la base de donn\u00e9es (ex. id_person) est un attribut qui repr\u00e9sente la colonne de la table SQL. Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Modifier cet attribut" permet de modifier l'attribut 
 
+###############################################################################
+# attributes types
+pluginwizard_attributes_types.1.description=Entier
+pluginwizard_attributes_types.2.description=Texte court (50 caract\u00e8res)
+pluginwizard_attributes_types.3.description=Texte moyen (255 caract\u00e8res)
+pluginwizard_attributes_types.4.description=Texte long ( &gt; 255 caract\u00e8res)
+pluginwizard_attributes_types.5.description=Email (255 caract\u00e8res)
+pluginwizard_attributes_types.6.description=URL (255 caract\u00e8res)
+pluginwizard_attributes_types.7.description=Date
+pluginwizard_attributes_types.8.description=Bool\u00e9en
+
 ################################################################################
 # modify_plugin.html
 pluginwizard_modify_plugin.pageTitle=Modifier le plugin 
