PLUGINWIZARD-140 : Small UI improvements

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -728,3 +728,6 @@ modify_configurationkey.rowId_key=Id
 modify_configurationkey.rowKey_description=Description
 modify_configurationkey.rowKey_value=Valeur
 modify_configurationkey.buttonValidate=Valider
+pluginwizard_create_plugin_description.placeholderPluginCopyright=Copyright (c) 2020 Votre soci\u00e9t\u00e9
+pluginwizard_create_plugin_description.placeholderPluginProvider=Votre soci\u00e9t\u00e9
+pluginwizard_create_plugin_description.placeholderPluginProviderUrl=http://www.votresociete.com
