PLUGINWIZARD-143 forms helps added

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -615,6 +615,24 @@ info.portlet.created=La portlet a \u00e9t\u00e9 ajout\u00e9e.
 info.portlet.updated=La portlet d'administration a \u00e9t\u00e9 modifi\u00e9e.
 info.portlet.deleted=La portlet d'administration a \u00e9t\u00e9 supprim\u00e9e.
 
+
+######Aide formulaires
+pluginwizard_business_class.help=Commence par une majuscule et ne contient que des lettres alphabétiques.
+pluginwizard_business_class_table.help=Commence par le nom de plugin suivi de "_". En minuscule uniquement.
+pluginwizard_plugin_description.help=La description doit contenir entre 5 et 255 caract\u00e8res.
+pluginwizard_plugin_provider.help=Le nom de l'auteur doit contenir entre 3 et 255 caract\u00e8res.
+pluginwizard_plugin_version.help=La version doit avoir le format 'N.N.N'.
+pluginwizard_plugin_copyright.help=Champ obligatoire.
+pluginwizard_plugin_provider_url.help=L'URL doit être précédée de http/https.
+pluginwizard_admin_feature_title.help=Le titre doit contenir entre 10 et 80 caract\u00e8res.
+pluginwizard_admin_feature_description.help=La description doit contenir entre 10 et 255 caract\u00e8res.
+pluginwizard_admin_feature_name.help=Le nom technique doit commencer par une majuscules et ne contenir que des lettres.
+pluginwizard_application_name.help=Le nom de la XPage doit être en minuscules et ne contenir que des lettres.
+pluginwizard_application_class.help=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres.
+pluginwizard_portlet_class.help= Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres et finir par 'Portlet' .
+pluginwizard_portlet_type_name.help=Le nom de type des portlets doit finir par '_PORTLET'.
+pluginwizard_jsp_base_name.help=Le nom de base des JSP doit commencer par 'Portlet' et ne contenir que des caractères alphabétiques. 
+
 error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
 
 error.plugin.name.notEmpty=Le nom du plugin doit \u00eatre renseign\u00e9.
